// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Chip examples CompactDeleteChipAvatarChipComponent should render correctly 1`] = `
<div>
  <div
    class="v-chip v-chip-compact v-flex v-flex-row"
    compact=""
    v-chip=""
    vflex=""
  >
    <img
      alt="Alex Miller"
      class="v-avatar"
      src="imgs/alex-miller-stock.png"
      v-avatar=""
    />
    <span>
      Label
    </span>
    <button
      aria-label="clear Label"
      buttoncolor="tertiary"
      class="v-button v-button-icon v-button-subtle v-button-tertiary"
      subtle=""
      type="button"
      v-button-icon=""
    >
      <svg
        aria-hidden="true"
        class="v-icon v-icon-clear-alt v-icon-tiny v-icon-visa"
        focusable="false"
        height="16"
        v-icon-visa-clear-alt-tiny=""
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          class="v-icon-primary"
          d="M8 0.000488281C12.4183 0.000488281 16 3.58221 16 8.00049C16 12.4188 12.4183 16.0005 8 16.0005C3.58172 16.0005 0 12.4188 0 8.00049C0 3.58221 3.58172 0.000488281 8 0.000488281ZM8 6.58643L5.70703 4.29346L4.29297 5.70752L6.58594 8.00049L4.29297 10.2935L5.70703 11.7075L8 9.41455L10.293 11.7075L11.707 10.2935L9.41406 8.00049L11.707 5.70752L10.293 4.29346L8 6.58643Z"
        />
        <defs>
          <clippath>
            <rect
              height="16"
              transform="translate(0 0.000488281)"
              width="16"
            />
          </clippath>
        </defs>
      </svg>
    </button>
  </div>
</div>
`;

exports[`Chip examples CompactDeleteChipDefaultChipComponent should render correctly 1`] = `
<div>
  <div
    class="v-chip v-chip-compact v-flex v-flex-row"
    compact=""
    v-chip=""
    vflex=""
  >
    <span>
      Label
    </span>
    <button
      aria-label="clear Label"
      buttoncolor="tertiary"
      class="v-button v-button-icon v-button-subtle v-button-tertiary"
      subtle=""
      type="button"
      v-button-icon=""
    >
      <svg
        aria-hidden="true"
        class="v-icon v-icon-clear-alt v-icon-tiny v-icon-visa"
        focusable="false"
        height="16"
        v-icon-visa-clear-alt-tiny=""
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          class="v-icon-primary"
          d="M8 0.000488281C12.4183 0.000488281 16 3.58221 16 8.00049C16 12.4188 12.4183 16.0005 8 16.0005C3.58172 16.0005 0 12.4188 0 8.00049C0 3.58221 3.58172 0.000488281 8 0.000488281ZM8 6.58643L5.70703 4.29346L4.29297 5.70752L6.58594 8.00049L4.29297 10.2935L5.70703 11.7075L8 9.41455L10.293 11.7075L11.707 10.2935L9.41406 8.00049L11.707 5.70752L10.293 4.29346L8 6.58643Z"
        />
        <defs>
          <clippath>
            <rect
              height="16"
              transform="translate(0 0.000488281)"
              width="16"
            />
          </clippath>
        </defs>
      </svg>
    </button>
  </div>
</div>
`;

exports[`Chip examples CompactDeleteChipIconChipComponent should render correctly 1`] = `
<div>
  <div
    class="v-chip v-chip-compact v-flex v-flex-row"
    compact=""
    v-chip=""
    vflex=""
  >
    <svg
      aria-hidden="true"
      class="v-icon v-icon-account v-icon-tiny v-icon-visa"
      focusable="false"
      height="16"
      v-icon-visa-account-tiny=""
      viewBox="0 0 16 16"
      width="16"
    >
      <path
        class="v-icon-secondary"
        d="M8 9C11.866 9 15 12.134 15 16H13C13 13.2386 10.7614 11 8 11C5.23858 11 3 13.2386 3 16H1C1 12.134 4.13401 9 8 9Z"
      />
      <path
        class="v-icon-primary"
        d="M8 0C10.2091 0 12 1.79086 12 4C12 6.20914 10.2091 8 8 8C5.79086 8 4 6.20914 4 4C4 1.79086 5.79086 0 8 0ZM8 2C6.89543 2 6 2.89543 6 4C6 5.10457 6.89543 6 8 6C9.10457 6 10 5.10457 10 4C10 2.89543 9.10457 2 8 2Z"
      />
    </svg>
    <span>
      Label
    </span>
    <button
      aria-label="clear Label"
      buttoncolor="tertiary"
      class="v-button v-button-icon v-button-subtle v-button-tertiary"
      subtle=""
      type="button"
      v-button-icon=""
    >
      <svg
        aria-hidden="true"
        class="v-icon v-icon-clear-alt v-icon-tiny v-icon-visa"
        focusable="false"
        height="16"
        v-icon-visa-clear-alt-tiny=""
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          class="v-icon-primary"
          d="M8 0.000488281C12.4183 0.000488281 16 3.58221 16 8.00049C16 12.4188 12.4183 16.0005 8 16.0005C3.58172 16.0005 0 12.4188 0 8.00049C0 3.58221 3.58172 0.000488281 8 0.000488281ZM8 6.58643L5.70703 4.29346L4.29297 5.70752L6.58594 8.00049L4.29297 10.2935L5.70703 11.7075L8 9.41455L10.293 11.7075L11.707 10.2935L9.41406 8.00049L11.707 5.70752L10.293 4.29346L8 6.58643Z"
        />
        <defs>
          <clippath>
            <rect
              height="16"
              transform="translate(0 0.000488281)"
              width="16"
            />
          </clippath>
        </defs>
      </svg>
    </button>
  </div>
</div>
`;

exports[`Chip examples CustomChipComponent should render correctly 1`] = `
<div>
  <div
    class="v-chip my-custom-chip"
    v-chip=""
  >
    <img
      alt="Alex Miller"
      class="v-avatar"
      src="imgs/alex-miller-stock.png"
      v-avatar=""
    />
    <span>
      Label
    </span>
  </div>
</div>
`;

exports[`Chip examples CustomErrorChipComponent should render correctly 1`] = `
<div>
  <div
    class="v-chip my-custom-error-chip"
    v-chip=""
  >
    Label
  </div>
</div>
`;

exports[`Chip examples DeleteChipAvatarChipComponent should render correctly 1`] = `
<div>
  <div
    class="v-chip v-flex v-flex-row"
    v-chip=""
    vflex=""
  >
    <img
      alt="Alex Miller"
      class="v-avatar"
      src="imgs/alex-miller-stock.png"
      v-avatar=""
    />
    <span>
      Label
    </span>
    <button
      aria-label="clear Label"
      buttoncolor="tertiary"
      class="v-button v-button-icon v-button-subtle v-button-tertiary"
      subtle=""
      type="button"
      v-button-icon=""
    >
      <svg
        aria-hidden="true"
        class="v-icon v-icon-clear-alt v-icon-tiny v-icon-visa"
        focusable="false"
        height="16"
        v-icon-visa-clear-alt-tiny=""
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          class="v-icon-primary"
          d="M8 0.000488281C12.4183 0.000488281 16 3.58221 16 8.00049C16 12.4188 12.4183 16.0005 8 16.0005C3.58172 16.0005 0 12.4188 0 8.00049C0 3.58221 3.58172 0.000488281 8 0.000488281ZM8 6.58643L5.70703 4.29346L4.29297 5.70752L6.58594 8.00049L4.29297 10.2935L5.70703 11.7075L8 9.41455L10.293 11.7075L11.707 10.2935L9.41406 8.00049L11.707 5.70752L10.293 4.29346L8 6.58643Z"
        />
        <defs>
          <clippath>
            <rect
              height="16"
              transform="translate(0 0.000488281)"
              width="16"
            />
          </clippath>
        </defs>
      </svg>
    </button>
  </div>
</div>
`;

exports[`Chip examples DeleteChipDefaultChipComponent should render correctly 1`] = `
<div>
  <div
    class="v-chip v-flex v-flex-row"
    v-chip=""
    vflex=""
  >
    <span>
      Label
    </span>
    <button
      aria-label="clear Label"
      buttoncolor="tertiary"
      class="v-button v-button-icon v-button-subtle v-button-tertiary"
      subtle=""
      type="button"
      v-button-icon=""
    >
      <svg
        aria-hidden="true"
        class="v-icon v-icon-clear-alt v-icon-tiny v-icon-visa"
        focusable="false"
        height="16"
        v-icon-visa-clear-alt-tiny=""
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          class="v-icon-primary"
          d="M8 0.000488281C12.4183 0.000488281 16 3.58221 16 8.00049C16 12.4188 12.4183 16.0005 8 16.0005C3.58172 16.0005 0 12.4188 0 8.00049C0 3.58221 3.58172 0.000488281 8 0.000488281ZM8 6.58643L5.70703 4.29346L4.29297 5.70752L6.58594 8.00049L4.29297 10.2935L5.70703 11.7075L8 9.41455L10.293 11.7075L11.707 10.2935L9.41406 8.00049L11.707 5.70752L10.293 4.29346L8 6.58643Z"
        />
        <defs>
          <clippath>
            <rect
              height="16"
              transform="translate(0 0.000488281)"
              width="16"
            />
          </clippath>
        </defs>
      </svg>
    </button>
  </div>
</div>
`;

exports[`Chip examples DeleteChipDisabledChipComponent should render correctly 1`] = `
<div>
  <div
    class="v-chip v-flex v-flex-row"
    v-chip=""
    vflex=""
  >
    <label
      class="v-label"
      for="delete-chip-disabled"
      id="a-v-label-0"
      v-label=""
    >
      Label
    </label>
    <button
      aria-label="clear Label"
      buttoncolor="tertiary"
      class="v-button v-button-icon v-button-subtle v-button-tertiary"
      disabled="disabled"
      id="delete-chip-disabled"
      subtle=""
      type="button"
      v-button-icon=""
    >
      <svg
        aria-hidden="true"
        class="v-icon v-icon-clear-alt v-icon-tiny v-icon-visa"
        focusable="false"
        height="16"
        v-icon-visa-clear-alt-tiny=""
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          class="v-icon-primary"
          d="M8 0.000488281C12.4183 0.000488281 16 3.58221 16 8.00049C16 12.4188 12.4183 16.0005 8 16.0005C3.58172 16.0005 0 12.4188 0 8.00049C0 3.58221 3.58172 0.000488281 8 0.000488281ZM8 6.58643L5.70703 4.29346L4.29297 5.70752L6.58594 8.00049L4.29297 10.2935L5.70703 11.7075L8 9.41455L10.293 11.7075L11.707 10.2935L9.41406 8.00049L11.707 5.70752L10.293 4.29346L8 6.58643Z"
        />
        <defs>
          <clippath>
            <rect
              height="16"
              transform="translate(0 0.000488281)"
              width="16"
            />
          </clippath>
        </defs>
      </svg>
    </button>
  </div>
</div>
`;

exports[`Chip examples DeleteChipIconChipComponent should render correctly 1`] = `
<div>
  <div
    class="v-chip v-flex v-flex-row"
    v-chip=""
    vflex=""
  >
    <svg
      aria-hidden="true"
      class="v-icon v-icon-account v-icon-tiny v-icon-visa"
      focusable="false"
      height="16"
      v-icon-visa-account-tiny=""
      viewBox="0 0 16 16"
      width="16"
    >
      <path
        class="v-icon-secondary"
        d="M8 9C11.866 9 15 12.134 15 16H13C13 13.2386 10.7614 11 8 11C5.23858 11 3 13.2386 3 16H1C1 12.134 4.13401 9 8 9Z"
      />
      <path
        class="v-icon-primary"
        d="M8 0C10.2091 0 12 1.79086 12 4C12 6.20914 10.2091 8 8 8C5.79086 8 4 6.20914 4 4C4 1.79086 5.79086 0 8 0ZM8 2C6.89543 2 6 2.89543 6 4C6 5.10457 6.89543 6 8 6C9.10457 6 10 5.10457 10 4C10 2.89543 9.10457 2 8 2Z"
      />
    </svg>
    <span>
      Label
    </span>
    <button
      aria-label="clear Label"
      buttoncolor="tertiary"
      class="v-button v-button-icon v-button-subtle v-button-tertiary"
      subtle=""
      type="button"
      v-button-icon=""
    >
      <svg
        aria-hidden="true"
        class="v-icon v-icon-clear-alt v-icon-tiny v-icon-visa"
        focusable="false"
        height="16"
        v-icon-visa-clear-alt-tiny=""
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          class="v-icon-primary"
          d="M8 0.000488281C12.4183 0.000488281 16 3.58221 16 8.00049C16 12.4188 12.4183 16.0005 8 16.0005C3.58172 16.0005 0 12.4188 0 8.00049C0 3.58221 3.58172 0.000488281 8 0.000488281ZM8 6.58643L5.70703 4.29346L4.29297 5.70752L6.58594 8.00049L4.29297 10.2935L5.70703 11.7075L8 9.41455L10.293 11.7075L11.707 10.2935L9.41406 8.00049L11.707 5.70752L10.293 4.29346L8 6.58643Z"
        />
        <defs>
          <clippath>
            <rect
              height="16"
              transform="translate(0 0.000488281)"
              width="16"
            />
          </clippath>
        </defs>
      </svg>
    </button>
  </div>
</div>
`;

exports[`Chip examples DisabledSelectedSelectionChipChipComponent should render correctly 1`] = `
<div>
  <label
    class="v-chip v-chip-selection v-gap-6 v-label"
    for="selection-chip-disabled-selected"
    id="a-v-label-0"
    v-chip=""
    v-label=""
    vgap="6"
  >
     Label 
    <input
      checked="checked"
      class="v-checkbox"
      disabled="disabled"
      id="selection-chip-disabled-selected"
      type="checkbox"
      v-checkbox=""
    />
  </label>
</div>
`;

exports[`Chip examples DisabledSelectionChipComponent should render correctly 1`] = `
<div>
  <label
    class="v-chip v-chip-selection v-gap-6 v-label"
    for="selection-chip-disabled"
    id="a-v-label-0"
    v-chip=""
    v-label=""
    vgap="6"
  >
     Label 
    <input
      class="v-checkbox"
      disabled="disabled"
      id="selection-chip-disabled"
      type="checkbox"
      v-checkbox=""
    />
  </label>
</div>
`;

exports[`Chip examples MultiLineSelectionChipComponent should render correctly 1`] = `
<div>
  <label
    class="v-chip v-chip-selection v-gap-6 v-label"
    for="multiline-selection-chip"
    id="a-v-label-0"
    v-chip=""
    v-label=""
    vgap="6"
  >
     This is a chip label 
    <br />
    that wraps on 
    <br />
    multiple lines 
    <input
      class="v-checkbox"
      id="multiline-selection-chip"
      type="checkbox"
      v-checkbox=""
    />
  </label>
</div>
`;

exports[`Chip examples ReadOnlySelectionChipCheckedChipComponent should render correctly 1`] = `
<div>
  <label
    class="v-chip v-chip-selection v-gap-6 v-label"
    for="selected-readonly-selection-chip"
    id="a-v-label-0"
    v-chip=""
    v-label=""
    vgap="6"
  >
     Label 
    <input
      checked="checked"
      class="v-checkbox"
      id="selected-readonly-selection-chip"
      readonly=""
      type="checkbox"
      v-checkbox=""
    />
  </label>
</div>
`;

exports[`Chip examples ReadOnlySelectionChipComponent should render correctly 1`] = `
<div>
  <label
    class="v-chip v-chip-selection v-gap-6 v-label"
    for="readonly-selection-chip"
    id="a-v-label-0"
    v-chip=""
    v-chip-selection=""
    v-label=""
    vgap="6"
  >
     Label 
    <input
      class="v-checkbox"
      id="readonly-selection-chip"
      readonly=""
      type="checkbox"
      v-checkbox=""
    />
  </label>
</div>
`;

exports[`Chip examples SelectedSelectionChipComponent should render correctly 1`] = `
<div>
  <label
    class="v-chip v-chip-selection v-gap-6 v-label"
    for="selection-selected-chip"
    id="a-v-label-0"
    v-chip=""
    v-label=""
    vgap="6"
  >
     Label 
    <input
      checked="checked"
      class="v-checkbox"
      id="selection-selected-chip"
      type="checkbox"
      v-checkbox=""
    />
  </label>
</div>
`;

exports[`Chip examples SelectionChipComponent should render correctly 1`] = `
<div>
  <label
    class="v-chip v-chip-selection v-gap-6 v-label"
    for="selection-chip-default"
    id="a-v-label-0"
    v-chip=""
    v-label=""
    vgap="6"
  >
     Label 
    <input
      class="v-checkbox"
      id="selection-chip-default"
      type="checkbox"
      v-checkbox=""
    />
  </label>
</div>
`;

exports[`Chip examples SetOfChipsDeleteChipsChipComponent should render correctly 1`] = `
<div>
  <fieldset
    class="v-gap-8 v-flex v-flex-row v-flex-wrap"
    vflex=""
    vflexwrap=""
    vgap="8"
  >
    <legend
      class="v-label v-typography-label-large"
      id="a-v-label-0"
      v-label=""
      vtypography="label-large"
    >
      Group label
    </legend>
    <ul
      class="v-flex v-flex-row"
      vflex=""
    >
      <li>
        <div
          class="v-chip v-flex v-flex-row"
          v-chip=""
          vflex=""
        >
          <span>
            Label 1
          </span>
          <button
            aria-label="clear Label 1"
            buttoncolor="tertiary"
            class="v-button v-button-icon v-button-subtle v-button-tertiary"
            id="removable-label-1"
            subtle=""
            type="button"
            v-button-icon=""
          >
            <svg
              aria-hidden="true"
              class="v-icon v-icon-clear-alt v-icon-tiny v-icon-visa"
              focusable="false"
              height="16"
              v-icon-visa-clear-alt-tiny=""
              viewBox="0 0 16 16"
              width="16"
            >
              <path
                class="v-icon-primary"
                d="M8 0.000488281C12.4183 0.000488281 16 3.58221 16 8.00049C16 12.4188 12.4183 16.0005 8 16.0005C3.58172 16.0005 0 12.4188 0 8.00049C0 3.58221 3.58172 0.000488281 8 0.000488281ZM8 6.58643L5.70703 4.29346L4.29297 5.70752L6.58594 8.00049L4.29297 10.2935L5.70703 11.7075L8 9.41455L10.293 11.7075L11.707 10.2935L9.41406 8.00049L11.707 5.70752L10.293 4.29346L8 6.58643Z"
              />
              <defs>
                <clippath>
                  <rect
                    height="16"
                    transform="translate(0 0.000488281)"
                    width="16"
                  />
                </clippath>
              </defs>
            </svg>
          </button>
        </div>
      </li>
      <li>
        <div
          class="v-chip v-flex v-flex-row"
          v-chip=""
          vflex=""
        >
          <span>
            Label 2
          </span>
          <button
            aria-label="clear Label 2"
            buttoncolor="tertiary"
            class="v-button v-button-icon v-button-subtle v-button-tertiary"
            id="removable-label-2"
            subtle=""
            type="button"
            v-button-icon=""
          >
            <svg
              aria-hidden="true"
              class="v-icon v-icon-clear-alt v-icon-tiny v-icon-visa"
              focusable="false"
              height="16"
              v-icon-visa-clear-alt-tiny=""
              viewBox="0 0 16 16"
              width="16"
            >
              <path
                class="v-icon-primary"
                d="M8 0.000488281C12.4183 0.000488281 16 3.58221 16 8.00049C16 12.4188 12.4183 16.0005 8 16.0005C3.58172 16.0005 0 12.4188 0 8.00049C0 3.58221 3.58172 0.000488281 8 0.000488281ZM8 6.58643L5.70703 4.29346L4.29297 5.70752L6.58594 8.00049L4.29297 10.2935L5.70703 11.7075L8 9.41455L10.293 11.7075L11.707 10.2935L9.41406 8.00049L11.707 5.70752L10.293 4.29346L8 6.58643Z"
              />
              <defs>
                <clippath>
                  <rect
                    height="16"
                    transform="translate(0 0.000488281)"
                    width="16"
                  />
                </clippath>
              </defs>
            </svg>
          </button>
        </div>
      </li>
      <li>
        <div
          class="v-chip v-flex v-flex-row"
          v-chip=""
          vflex=""
        >
          <span>
            Label 3
          </span>
          <button
            aria-label="clear Label 3"
            buttoncolor="tertiary"
            class="v-button v-button-icon v-button-subtle v-button-tertiary"
            id="removable-label-3"
            subtle=""
            type="button"
            v-button-icon=""
          >
            <svg
              aria-hidden="true"
              class="v-icon v-icon-clear-alt v-icon-tiny v-icon-visa"
              focusable="false"
              height="16"
              v-icon-visa-clear-alt-tiny=""
              viewBox="0 0 16 16"
              width="16"
            >
              <path
                class="v-icon-primary"
                d="M8 0.000488281C12.4183 0.000488281 16 3.58221 16 8.00049C16 12.4188 12.4183 16.0005 8 16.0005C3.58172 16.0005 0 12.4188 0 8.00049C0 3.58221 3.58172 0.000488281 8 0.000488281ZM8 6.58643L5.70703 4.29346L4.29297 5.70752L6.58594 8.00049L4.29297 10.2935L5.70703 11.7075L8 9.41455L10.293 11.7075L11.707 10.2935L9.41406 8.00049L11.707 5.70752L10.293 4.29346L8 6.58643Z"
              />
              <defs>
                <clippath>
                  <rect
                    height="16"
                    transform="translate(0 0.000488281)"
                    width="16"
                  />
                </clippath>
              </defs>
            </svg>
          </button>
        </div>
      </li>
      <li>
        <div
          class="v-chip v-flex v-flex-row"
          v-chip=""
          vflex=""
        >
          <span>
            Label 4
          </span>
          <button
            aria-label="clear Label 4"
            buttoncolor="tertiary"
            class="v-button v-button-icon v-button-subtle v-button-tertiary"
            id="removable-label-4"
            subtle=""
            type="button"
            v-button-icon=""
          >
            <svg
              aria-hidden="true"
              class="v-icon v-icon-clear-alt v-icon-tiny v-icon-visa"
              focusable="false"
              height="16"
              v-icon-visa-clear-alt-tiny=""
              viewBox="0 0 16 16"
              width="16"
            >
              <path
                class="v-icon-primary"
                d="M8 0.000488281C12.4183 0.000488281 16 3.58221 16 8.00049C16 12.4188 12.4183 16.0005 8 16.0005C3.58172 16.0005 0 12.4188 0 8.00049C0 3.58221 3.58172 0.000488281 8 0.000488281ZM8 6.58643L5.70703 4.29346L4.29297 5.70752L6.58594 8.00049L4.29297 10.2935L5.70703 11.7075L8 9.41455L10.293 11.7075L11.707 10.2935L9.41406 8.00049L11.707 5.70752L10.293 4.29346L8 6.58643Z"
              />
              <defs>
                <clippath>
                  <rect
                    height="16"
                    transform="translate(0 0.000488281)"
                    width="16"
                  />
                </clippath>
              </defs>
            </svg>
          </button>
        </div>
      </li>
      <li>
        <div
          class="v-chip v-flex v-flex-row"
          v-chip=""
          vflex=""
        >
          <span>
            Label 5
          </span>
          <button
            aria-label="clear Label 5"
            buttoncolor="tertiary"
            class="v-button v-button-icon v-button-subtle v-button-tertiary"
            id="removable-label-5"
            subtle=""
            type="button"
            v-button-icon=""
          >
            <svg
              aria-hidden="true"
              class="v-icon v-icon-clear-alt v-icon-tiny v-icon-visa"
              focusable="false"
              height="16"
              v-icon-visa-clear-alt-tiny=""
              viewBox="0 0 16 16"
              width="16"
            >
              <path
                class="v-icon-primary"
                d="M8 0.000488281C12.4183 0.000488281 16 3.58221 16 8.00049C16 12.4188 12.4183 16.0005 8 16.0005C3.58172 16.0005 0 12.4188 0 8.00049C0 3.58221 3.58172 0.000488281 8 0.000488281ZM8 6.58643L5.70703 4.29346L4.29297 5.70752L6.58594 8.00049L4.29297 10.2935L5.70703 11.7075L8 9.41455L10.293 11.7075L11.707 10.2935L9.41406 8.00049L11.707 5.70752L10.293 4.29346L8 6.58643Z"
              />
              <defs>
                <clippath>
                  <rect
                    height="16"
                    transform="translate(0 0.000488281)"
                    width="16"
                  />
                </clippath>
              </defs>
            </svg>
          </button>
        </div>
      </li>
      <li>
        <div
          class="v-chip v-flex v-flex-row"
          v-chip=""
          vflex=""
        >
          <span>
            Label 6
          </span>
          <button
            aria-label="clear Label 6"
            buttoncolor="tertiary"
            class="v-button v-button-icon v-button-subtle v-button-tertiary"
            id="removable-label-6"
            subtle=""
            type="button"
            v-button-icon=""
          >
            <svg
              aria-hidden="true"
              class="v-icon v-icon-clear-alt v-icon-tiny v-icon-visa"
              focusable="false"
              height="16"
              v-icon-visa-clear-alt-tiny=""
              viewBox="0 0 16 16"
              width="16"
            >
              <path
                class="v-icon-primary"
                d="M8 0.000488281C12.4183 0.000488281 16 3.58221 16 8.00049C16 12.4188 12.4183 16.0005 8 16.0005C3.58172 16.0005 0 12.4188 0 8.00049C0 3.58221 3.58172 0.000488281 8 0.000488281ZM8 6.58643L5.70703 4.29346L4.29297 5.70752L6.58594 8.00049L4.29297 10.2935L5.70703 11.7075L8 9.41455L10.293 11.7075L11.707 10.2935L9.41406 8.00049L11.707 5.70752L10.293 4.29346L8 6.58643Z"
              />
              <defs>
                <clippath>
                  <rect
                    height="16"
                    transform="translate(0 0.000488281)"
                    width="16"
                  />
                </clippath>
              </defs>
            </svg>
          </button>
        </div>
      </li>
      <li>
        <div
          class="v-chip v-flex v-flex-row"
          v-chip=""
          vflex=""
        >
          <span>
            Label 7
          </span>
          <button
            aria-label="clear Label 7"
            buttoncolor="tertiary"
            class="v-button v-button-icon v-button-subtle v-button-tertiary"
            id="removable-label-7"
            subtle=""
            type="button"
            v-button-icon=""
          >
            <svg
              aria-hidden="true"
              class="v-icon v-icon-clear-alt v-icon-tiny v-icon-visa"
              focusable="false"
              height="16"
              v-icon-visa-clear-alt-tiny=""
              viewBox="0 0 16 16"
              width="16"
            >
              <path
                class="v-icon-primary"
                d="M8 0.000488281C12.4183 0.000488281 16 3.58221 16 8.00049C16 12.4188 12.4183 16.0005 8 16.0005C3.58172 16.0005 0 12.4188 0 8.00049C0 3.58221 3.58172 0.000488281 8 0.000488281ZM8 6.58643L5.70703 4.29346L4.29297 5.70752L6.58594 8.00049L4.29297 10.2935L5.70703 11.7075L8 9.41455L10.293 11.7075L11.707 10.2935L9.41406 8.00049L11.707 5.70752L10.293 4.29346L8 6.58643Z"
              />
              <defs>
                <clippath>
                  <rect
                    height="16"
                    transform="translate(0 0.000488281)"
                    width="16"
                  />
                </clippath>
              </defs>
            </svg>
          </button>
        </div>
      </li>
      
    </ul>
  </fieldset>
  <div
    class="v-mt-12"
    vmt="12"
  >
    <button
      class="v-button"
      id="removable-reset-button"
      type="button"
      v-button=""
    >
      Reset
    </button>
  </div>
</div>
`;

exports[`Chip examples SetOfChipsDeleteChipsCompactChipComponent should render correctly 1`] = `
<div>
  <fieldset
    class="v-gap-8 v-flex v-flex-row v-flex-wrap"
    vflex=""
    vflexwrap=""
    vgap="8"
  >
    <legend
      class="v-label v-typography-label-large"
      id="a-v-label-0"
      v-label=""
      vtypography="label-large"
    >
      Group label
    </legend>
    <ul
      class="v-flex v-flex-row"
      vflex=""
    >
      <li>
        <div
          class="v-chip v-chip-compact v-flex v-flex-row"
          compact=""
          v-chip=""
          vflex=""
        >
          <span>
            Label 1
          </span>
          <button
            aria-label="clear Label 1"
            buttoncolor="tertiary"
            class="v-button v-button-icon v-button-subtle v-button-tertiary"
            id="removable-compact-label-1"
            subtle=""
            type="button"
            v-button-icon=""
          >
            <svg
              aria-hidden="true"
              class="v-icon v-icon-clear-alt v-icon-tiny v-icon-visa"
              focusable="false"
              height="16"
              v-icon-visa-clear-alt-tiny=""
              viewBox="0 0 16 16"
              width="16"
            >
              <path
                class="v-icon-primary"
                d="M8 0.000488281C12.4183 0.000488281 16 3.58221 16 8.00049C16 12.4188 12.4183 16.0005 8 16.0005C3.58172 16.0005 0 12.4188 0 8.00049C0 3.58221 3.58172 0.000488281 8 0.000488281ZM8 6.58643L5.70703 4.29346L4.29297 5.70752L6.58594 8.00049L4.29297 10.2935L5.70703 11.7075L8 9.41455L10.293 11.7075L11.707 10.2935L9.41406 8.00049L11.707 5.70752L10.293 4.29346L8 6.58643Z"
              />
              <defs>
                <clippath>
                  <rect
                    height="16"
                    transform="translate(0 0.000488281)"
                    width="16"
                  />
                </clippath>
              </defs>
            </svg>
          </button>
        </div>
      </li>
      <li>
        <div
          class="v-chip v-chip-compact v-flex v-flex-row"
          compact=""
          v-chip=""
          vflex=""
        >
          <span>
            Label 2
          </span>
          <button
            aria-label="clear Label 2"
            buttoncolor="tertiary"
            class="v-button v-button-icon v-button-subtle v-button-tertiary"
            id="removable-compact-label-2"
            subtle=""
            type="button"
            v-button-icon=""
          >
            <svg
              aria-hidden="true"
              class="v-icon v-icon-clear-alt v-icon-tiny v-icon-visa"
              focusable="false"
              height="16"
              v-icon-visa-clear-alt-tiny=""
              viewBox="0 0 16 16"
              width="16"
            >
              <path
                class="v-icon-primary"
                d="M8 0.000488281C12.4183 0.000488281 16 3.58221 16 8.00049C16 12.4188 12.4183 16.0005 8 16.0005C3.58172 16.0005 0 12.4188 0 8.00049C0 3.58221 3.58172 0.000488281 8 0.000488281ZM8 6.58643L5.70703 4.29346L4.29297 5.70752L6.58594 8.00049L4.29297 10.2935L5.70703 11.7075L8 9.41455L10.293 11.7075L11.707 10.2935L9.41406 8.00049L11.707 5.70752L10.293 4.29346L8 6.58643Z"
              />
              <defs>
                <clippath>
                  <rect
                    height="16"
                    transform="translate(0 0.000488281)"
                    width="16"
                  />
                </clippath>
              </defs>
            </svg>
          </button>
        </div>
      </li>
      <li>
        <div
          class="v-chip v-chip-compact v-flex v-flex-row"
          compact=""
          v-chip=""
          vflex=""
        >
          <span>
            Label 3
          </span>
          <button
            aria-label="clear Label 3"
            buttoncolor="tertiary"
            class="v-button v-button-icon v-button-subtle v-button-tertiary"
            id="removable-compact-label-3"
            subtle=""
            type="button"
            v-button-icon=""
          >
            <svg
              aria-hidden="true"
              class="v-icon v-icon-clear-alt v-icon-tiny v-icon-visa"
              focusable="false"
              height="16"
              v-icon-visa-clear-alt-tiny=""
              viewBox="0 0 16 16"
              width="16"
            >
              <path
                class="v-icon-primary"
                d="M8 0.000488281C12.4183 0.000488281 16 3.58221 16 8.00049C16 12.4188 12.4183 16.0005 8 16.0005C3.58172 16.0005 0 12.4188 0 8.00049C0 3.58221 3.58172 0.000488281 8 0.000488281ZM8 6.58643L5.70703 4.29346L4.29297 5.70752L6.58594 8.00049L4.29297 10.2935L5.70703 11.7075L8 9.41455L10.293 11.7075L11.707 10.2935L9.41406 8.00049L11.707 5.70752L10.293 4.29346L8 6.58643Z"
              />
              <defs>
                <clippath>
                  <rect
                    height="16"
                    transform="translate(0 0.000488281)"
                    width="16"
                  />
                </clippath>
              </defs>
            </svg>
          </button>
        </div>
      </li>
      <li>
        <div
          class="v-chip v-chip-compact v-flex v-flex-row"
          compact=""
          v-chip=""
          vflex=""
        >
          <span>
            Label 4
          </span>
          <button
            aria-label="clear Label 4"
            buttoncolor="tertiary"
            class="v-button v-button-icon v-button-subtle v-button-tertiary"
            id="removable-compact-label-4"
            subtle=""
            type="button"
            v-button-icon=""
          >
            <svg
              aria-hidden="true"
              class="v-icon v-icon-clear-alt v-icon-tiny v-icon-visa"
              focusable="false"
              height="16"
              v-icon-visa-clear-alt-tiny=""
              viewBox="0 0 16 16"
              width="16"
            >
              <path
                class="v-icon-primary"
                d="M8 0.000488281C12.4183 0.000488281 16 3.58221 16 8.00049C16 12.4188 12.4183 16.0005 8 16.0005C3.58172 16.0005 0 12.4188 0 8.00049C0 3.58221 3.58172 0.000488281 8 0.000488281ZM8 6.58643L5.70703 4.29346L4.29297 5.70752L6.58594 8.00049L4.29297 10.2935L5.70703 11.7075L8 9.41455L10.293 11.7075L11.707 10.2935L9.41406 8.00049L11.707 5.70752L10.293 4.29346L8 6.58643Z"
              />
              <defs>
                <clippath>
                  <rect
                    height="16"
                    transform="translate(0 0.000488281)"
                    width="16"
                  />
                </clippath>
              </defs>
            </svg>
          </button>
        </div>
      </li>
      <li>
        <div
          class="v-chip v-chip-compact v-flex v-flex-row"
          compact=""
          v-chip=""
          vflex=""
        >
          <span>
            Label 5
          </span>
          <button
            aria-label="clear Label 5"
            buttoncolor="tertiary"
            class="v-button v-button-icon v-button-subtle v-button-tertiary"
            id="removable-compact-label-5"
            subtle=""
            type="button"
            v-button-icon=""
          >
            <svg
              aria-hidden="true"
              class="v-icon v-icon-clear-alt v-icon-tiny v-icon-visa"
              focusable="false"
              height="16"
              v-icon-visa-clear-alt-tiny=""
              viewBox="0 0 16 16"
              width="16"
            >
              <path
                class="v-icon-primary"
                d="M8 0.000488281C12.4183 0.000488281 16 3.58221 16 8.00049C16 12.4188 12.4183 16.0005 8 16.0005C3.58172 16.0005 0 12.4188 0 8.00049C0 3.58221 3.58172 0.000488281 8 0.000488281ZM8 6.58643L5.70703 4.29346L4.29297 5.70752L6.58594 8.00049L4.29297 10.2935L5.70703 11.7075L8 9.41455L10.293 11.7075L11.707 10.2935L9.41406 8.00049L11.707 5.70752L10.293 4.29346L8 6.58643Z"
              />
              <defs>
                <clippath>
                  <rect
                    height="16"
                    transform="translate(0 0.000488281)"
                    width="16"
                  />
                </clippath>
              </defs>
            </svg>
          </button>
        </div>
      </li>
      <li>
        <div
          class="v-chip v-chip-compact v-flex v-flex-row"
          compact=""
          v-chip=""
          vflex=""
        >
          <span>
            Label 6
          </span>
          <button
            aria-label="clear Label 6"
            buttoncolor="tertiary"
            class="v-button v-button-icon v-button-subtle v-button-tertiary"
            id="removable-compact-label-6"
            subtle=""
            type="button"
            v-button-icon=""
          >
            <svg
              aria-hidden="true"
              class="v-icon v-icon-clear-alt v-icon-tiny v-icon-visa"
              focusable="false"
              height="16"
              v-icon-visa-clear-alt-tiny=""
              viewBox="0 0 16 16"
              width="16"
            >
              <path
                class="v-icon-primary"
                d="M8 0.000488281C12.4183 0.000488281 16 3.58221 16 8.00049C16 12.4188 12.4183 16.0005 8 16.0005C3.58172 16.0005 0 12.4188 0 8.00049C0 3.58221 3.58172 0.000488281 8 0.000488281ZM8 6.58643L5.70703 4.29346L4.29297 5.70752L6.58594 8.00049L4.29297 10.2935L5.70703 11.7075L8 9.41455L10.293 11.7075L11.707 10.2935L9.41406 8.00049L11.707 5.70752L10.293 4.29346L8 6.58643Z"
              />
              <defs>
                <clippath>
                  <rect
                    height="16"
                    transform="translate(0 0.000488281)"
                    width="16"
                  />
                </clippath>
              </defs>
            </svg>
          </button>
        </div>
      </li>
      <li>
        <div
          class="v-chip v-chip-compact v-flex v-flex-row"
          compact=""
          v-chip=""
          vflex=""
        >
          <span>
            Label 7
          </span>
          <button
            aria-label="clear Label 7"
            buttoncolor="tertiary"
            class="v-button v-button-icon v-button-subtle v-button-tertiary"
            id="removable-compact-label-7"
            subtle=""
            type="button"
            v-button-icon=""
          >
            <svg
              aria-hidden="true"
              class="v-icon v-icon-clear-alt v-icon-tiny v-icon-visa"
              focusable="false"
              height="16"
              v-icon-visa-clear-alt-tiny=""
              viewBox="0 0 16 16"
              width="16"
            >
              <path
                class="v-icon-primary"
                d="M8 0.000488281C12.4183 0.000488281 16 3.58221 16 8.00049C16 12.4188 12.4183 16.0005 8 16.0005C3.58172 16.0005 0 12.4188 0 8.00049C0 3.58221 3.58172 0.000488281 8 0.000488281ZM8 6.58643L5.70703 4.29346L4.29297 5.70752L6.58594 8.00049L4.29297 10.2935L5.70703 11.7075L8 9.41455L10.293 11.7075L11.707 10.2935L9.41406 8.00049L11.707 5.70752L10.293 4.29346L8 6.58643Z"
              />
              <defs>
                <clippath>
                  <rect
                    height="16"
                    transform="translate(0 0.000488281)"
                    width="16"
                  />
                </clippath>
              </defs>
            </svg>
          </button>
        </div>
      </li>
      
    </ul>
  </fieldset>
  <div
    class="v-mt-12"
    vmt="12"
  >
    <button
      class="v-button"
      id="removable-compact-reset-button"
      type="button"
      v-button=""
    >
      Reset
    </button>
  </div>
</div>
`;

exports[`Chip examples SetOfChipsSelectionChipComponent should render correctly 1`] = `
<div>
  <fieldset
    class="v-gap-8 v-flex v-flex-row v-flex-wrap"
    vflex=""
    vflexwrap=""
    vgap="8"
  >
    <legend
      class="v-label v-typography-label-large"
      id="a-v-label-0"
      v-label=""
      vtypography="label-large"
    >
      Group label
    </legend>
    <ul
      class="v-flex v-flex-row"
      vflex=""
    >
      <li>
        <label
          class="v-chip v-chip-selection v-gap-6 v-label"
          for="selection-chip-group0"
          id="a-v-label-1"
          v-chip=""
          v-label=""
          vgap="6"
        >
           Label 1 
          <input
            class="v-checkbox"
            id="selection-chip-group0"
            type="checkbox"
            v-checkbox=""
          />
        </label>
      </li>
      <li>
        <label
          class="v-chip v-chip-selection v-gap-6 v-label"
          for="selection-chip-group1"
          id="a-v-label-2"
          v-chip=""
          v-label=""
          vgap="6"
        >
           Label 2 
          <input
            class="v-checkbox"
            id="selection-chip-group1"
            type="checkbox"
            v-checkbox=""
          />
        </label>
      </li>
      <li>
        <label
          class="v-chip v-chip-selection v-gap-6 v-label"
          for="selection-chip-group2"
          id="a-v-label-3"
          v-chip=""
          v-label=""
          vgap="6"
        >
           Label 3 
          <input
            class="v-checkbox"
            id="selection-chip-group2"
            type="checkbox"
            v-checkbox=""
          />
        </label>
      </li>
      <li>
        <label
          class="v-chip v-chip-selection v-gap-6 v-label"
          for="selection-chip-group3"
          id="a-v-label-4"
          v-chip=""
          v-label=""
          vgap="6"
        >
           Label 4 
          <input
            class="v-checkbox"
            id="selection-chip-group3"
            type="checkbox"
            v-checkbox=""
          />
        </label>
      </li>
      <li>
        <label
          class="v-chip v-chip-selection v-gap-6 v-label"
          for="selection-chip-group4"
          id="a-v-label-5"
          v-chip=""
          v-label=""
          vgap="6"
        >
           Label 5 
          <input
            class="v-checkbox"
            id="selection-chip-group4"
            type="checkbox"
            v-checkbox=""
          />
        </label>
      </li>
      <li>
        <label
          class="v-chip v-chip-selection v-gap-6 v-label"
          for="selection-chip-group5"
          id="a-v-label-6"
          v-chip=""
          v-label=""
          vgap="6"
        >
           Label 6 
          <input
            class="v-checkbox"
            id="selection-chip-group5"
            type="checkbox"
            v-checkbox=""
          />
        </label>
      </li>
      <li>
        <label
          class="v-chip v-chip-selection v-gap-6 v-label"
          for="selection-chip-group6"
          id="a-v-label-7"
          v-chip=""
          v-label=""
          vgap="6"
        >
           Label 7 
          <input
            class="v-checkbox"
            id="selection-chip-group6"
            type="checkbox"
            v-checkbox=""
          />
        </label>
      </li>
      
    </ul>
  </fieldset>
</div>
`;

exports[`Chip examples StandardChipComponent should render correctly 1`] = `
<div>
  <div
    class="v-chip"
    v-chip=""
  >
    Label
  </div>
</div>
`;
